# ProofRAG

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: sample_minirag_export.jsonl  toy_lihua.jsonl
configs/: default.yaml
docs/: FACE_EXECUTION_PLAN.md  architecture.md  completion_audit.md  external_evidence_checklist.md  full_benchmark_review_template.md  minirag_adapter_plan.md  paper_abstract.md  release_evidence_templates.md  reproducibility.md  results_snapshot.md  roadmap_artifact_matrix.md
examples/: context.json
proofrag/: __init__.py  cli.py  config.py  logger.py
proofrag/api/: __init__.py  main.py  schemas.py
proofrag/contracts/: __init__.py  adaptive.py  infer.py  llm.py  schema.py
proofrag/evaluation/: __init__.py  answer_metrics.py  comparison.py  dataset.py  error_analysis.py  faithfulness.py  lihua.py  lihua_augmentation.py  metrics.py  minirag_adapter.py  minirag_experiment.py  plots.py  report.py  runner.py  source_coverage.py  statistics.py  tables.py
proofrag/evidence/: __init__.py  contradiction.py  extraction.py  ledger.py  sufficiency.py
proofrag/generation/: __init__.py  base.py  dummy.py  ollama.py  openai_compatible.py  strict_verifier.py  transformers.py
proofrag/human_eval/: __init__.py  schema.py
proofrag/packing/: __init__.py  strict_context.py
proofrag/retrieval/: __init__.py  base.py  bm25.py  dummy.py  hybrid.py  iterative.py  rerank.py  vector.py
scratch/: test_minirag_query.py
scripts/: audit_completion_readiness.py  augment_lihua_export.py  check_completion_gates.py  check_roadmap_artifacts.py  compare_minirag_proofrag.py  compare_model_runs.py  compare_real_results.py  init_external_evidence_bundle.py  make_publication_tables.py  overall_performance.py  prepare_human_eval.py  reproduce_paper_results.sh  run_ablation.py  run_full_benchmark_pipeline.py  run_lihua_eval.py  run_local_release_checks.py  run_minirag_adapter_demo.py  run_minirag_single_smoke_with_model.py  run_proofrag_over_minirag.py  run_proofrag_over_minirag_with_model.py  run_real_minirag_tiny_single_smoke.py  run_toy_benchmark.py  run_toy_benchmark_with_model.py  score_faithfulness.py  summarise_proofrag_table.py  summarize_experiment_log.py  validate_publication_claims.py  verify_distribution_contents.py  write_external_evidence_manifest.py  write_full_benchmark_review.py
tests/: __init__.py  test_adaptive_contracts.py  test_answer_metrics.py  test_api.py  test_benchmark_harness.py  test_bm25_retriever.py  test_compare_minirag_proofrag_script.py  test_comparison.py  test_completion_gates.py  test_completion_readiness_audit.py  test_config.py  test_contract_schema.py  test_distribution_contents.py  test_error_analysis.py  test_evidence_extraction.py  test_evidence_ledger.py  test_experiment_logger.py  test_external_evidence_bundle.py  test_external_evidence_manifest.py  test_faithfulness_metrics.py  test_full_benchmark_pipeline.py  test_full_benchmark_review.py  test_human_eval.py  test_hybrid_retriever.py  test_iterative_retrieval.py  test_lihua_augmentation.py  test_lihua_loader.py  test_llm_contract_inference.py  test_minirag_adapter.py  test_minirag_export_schema.py  test_minirag_subset.py  test_model_runner_prompt.py  test_ollama_generator.py  test_openai_compatible_generator.py  test_packaging_metadata.py  test_proofrag_over_minirag.py  test_publication_claims.py  test_publication_scripts.py  test_release_checks.py  test_roadmap_artifacts.py  (+15 more)
