[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofrag"
version = "0.1.0"
description = "ProofRAG — evidence-contracted RAG for small language models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "ProofRAG Contributors" }
]

keywords = ["rag", "retrieval-augmented-generation", "evidence", "nlp"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
proofrag = "proofrag.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["proofrag*"]

[tool.setuptools.package-data]
# Include the bundled example corpus used by DummyRetriever.
"*" = ["examples/*.json", "experiments/results/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"
